# TinyGNN

./: .gitattributes  .gitignore  CITATION.cff  CMakeLists.txt  CONTRIBUTING.md  Doxyfile  LICENSE  MANIFEST.in  README.md  pyproject.toml  setup.py
.github/workflows/: ci.yml
benchmarks/: bench_datasets.cpp  bench_parallel.cpp  gnn_bench_results_accuracy.csv  gnn_bench_results_timing.csv  massif_gat_unfused.cpp
benchmarks_jai/: bench_fusion.cpp  gnn_bench_results_accuracy.csv  massif_gat_fused.cpp
build-ci/: .ninja_deps  .ninja_log  CTestTestfile.cmake  build.ninja  tinygnn-config.cmake
build-ci/Testing/Temporary/: CTestCostData.txt  LastTest.log.tmp1610d
cmake/: tinygnn-config.cmake.in
docs/: benchmarks.rst  conf.py  contributing.rst  cpp_api.rst  index.rst  installation.rst  python_api.rst  quickstart.rst
include/tinygnn/: graph_loader.hpp  layers.hpp  model.hpp  ops.hpp  tensor.hpp
ports/tinygnn/: portfile.cmake  vcpkg.json
python/: tinygnn_ext.cpp
python/tinygnn/: __init__.py
python/tinygnn/tests/: __init__.py  __main__.py  smoke_tests.py
scripts/: __init__.py  bench_gnn.py  build_python.py  fetch_datasets.py  install_wsl_tools.sh  plot_dataset_bench.py  plot_gnn_bench.py  plot_scaling.py  run_install_test.sh  run_massif_phase9.sh  run_sanitizers_phase2.sh  run_valgrind_phase2.sh  sanitizers.sh  train_cora.py  valgrind_all.sh  validate_cora.py
src/: graph_loader.cpp  layers.cpp  model.cpp  ops.cpp  tensor.cpp
tests/: test_activations.cpp  test_e2e.cpp  test_gat.cpp  test_gcn.cpp  test_gnn_integration.py  test_graph_loader.cpp  test_graphsage.cpp  test_install.cpp  test_matmul.cpp  test_python_bindings.py  test_spmm.cpp  test_tensor.cpp
